# femat

./: README.md  pyproject.toml  setup.m
examples/beam/: example.m  example.py  reference.py
examples/beam/output/: sol2d.txt  sol3d.txt
examples/beam/output/msh/: box.msh
examples/top88/: top88.m  top88.py
src/fem/: assembly.m  basis.m  mesh.m  solver.m
src/fem/analysis/statics/: finite_strain.m  small_strain.m
src/fem/constitutive/: hyperelastic.m  linear_elastic.m
src/pyfemat/: __init__.py  engine.py  mesh.py  model.py
src/utils/: elementools.m  iotools.m  meshtools.m
